# go-openlawsvpn

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  client.go  client_integration_test.go  client_mobile.go  client_mobile_darwin.go  client_mobile_ios.go  client_test.go  client_tun_android.go  client_tun_darwin.go  client_tun_ios.go  client_tun_linux.go  event.go  go.mod  go.sum  rpkg.conf
.github/workflows/: aar.yml  ci.yml  release.yml  vpn-integration.yml  xcframework.yml
auth/saml/: integration_test.go  monitor.go  monitor_test.go  msg.go  msg_test.go  saml.go  saml_fuzz_test.go  saml_test.go  session.go  session_test.go  token.go  token_test.go
cmd/cli/: main.go  main_test.go
cmd/daemon/: main.go  openlawsvpn-daemon.service  openlawsvpn-daemon@.service  relay_client.go  service.go  service_test.go
cmd/ovpn3/: main.go  main_test.go
cmd/relay-server/: main.go
dns/: dns.go  dns_darwin.go  dns_ios.go  dns_linux.go  dns_test.go
docs/: ci-relay.md  security-architecture.md
gui-gtk/: Cargo.toml  build.rs  notice.txt
gui-gtk/src/: about_view.rs  main.rs  profile_store.rs  relay_store.rs  tray.rs  vpn_service.rs
gui-gtk/src/connection/: mod.rs  state.rs
gui-gtk/src/relay/: mod.rs
internal/compress/: compress.go  compress_test.go
internal/crypto/: cbc.go  cipher.go  cipher_test.go  crypto_fuzz_test.go
internal/ctls/: ctls.go  ctls_test.go  integration_test.go
internal/datachannel/: datachannel.go  datachannel_fuzz_test.go  datachannel_test.go  integration_test.go  manager.go  manager_test.go
internal/framing/: framing.go  framing_fuzz_test.go  framing_test.go  opcodes.go
internal/mssfix/: mssfix.go  mssfix_test.go
internal/prf/: prf.go  prf_test.go
internal/reliable/: reliable.go  reliable_fuzz_test.go  reliable_test.go
mock/: CMakeLists.txt  Dockerfile  gencerts.sh  server.cpp
mock/mockserver/: README.md  main.go
packaging/: 10-openlawsvpn-caps.conf  10-openlawsvpn-dns.rules  90-openlawsvpn.preset  PKGBUILD  com.openlawsvpn.Daemon.conf  com.openlawsvpn.Daemon.service  openlawsvpn-gui.desktop  openlawsvpn.install  openlawsvpn.spec  rpkg.macros  test-aur.sh
profile/: profile.go  profile_fuzz_test.go  profile_test.go
relay/: relay.go  relay_test.go  tls.go
routing/: bypass_test.go  netlink.go  netlink_darwin.go  netlink_ios.go  push.go  push_fuzz_test.go  routing_test.go
scripts/: cli-integration.sh
testdata/: mock-local.ovpn
testenv/: testenv.go  testenv_test.go
tun/: integration_test.go  tun.go  tun_android.go  tun_darwin.go  tun_ios.go  tun_test.go
