[package]
name = "openlawsvpn-gui"
version = "1.0.4"
edition = "2021"
description = "GTK4 + libadwaita GUI for openlawsvpn"
license = "LGPL-2.1-or-later"

[[bin]]
name = "openlawsvpn-gui"
path = "src/main.rs"

# Parallel codegen units: release default is 1 (max LTO), which serializes
# all LLVM work. 16 units parallelize across cores at minor binary-size cost.
# lto = "thin" keeps cross-unit inlining without the full-LTO serial bottleneck.
[profile.release]
codegen-units = 16
lto = "thin"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime", "regex"] }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", features = ["tokio"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "blocking"] }
